--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "This repository holds the source code of my Webpack 2 Basics Series on YouTube. Make sure to watch the Videos on YouTube to understand how to use that code.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build"
+    
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/mschwarzmueller/yt-webpack2-basics/issues"
   },
-  "homepage": "https://github.com/mschwarzmueller/yt-webpack2-basics#readme"
+  "homepage": "https://github.com/mschwarzmueller/yt-webpack2-basics#readme",
+  "devDependencies": {
+    "webpack": "^2.4.1"
+  }
 }
