--- a/webpack2-basic2-babel-scss/package.json
+++ b/webpack2-basic2-babel-scss/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack-dev-server"
+    "build": "webpack-dev-server",
+    "build:prod": "webpack -p"
   },
   "keywords": [],
   "author": "bonbonpa dvp",
@@ -16,6 +17,9 @@
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
+    "html-loader": "^0.4.5",
+    "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.2",
     "sass-loader": "^6.0.3",
     "webpack": "^2.4.1",
