--- a/webpack2-basic2-babel-scss/package.json
+++ b/webpack2-basic2-babel-scss/package.json
@@ -25,5 +25,8 @@
     "sass-loader": "^6.0.3",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.5"
+  },
+  "dependencies": {
+    "jquery": "^3.2.1"
   }
 }
